--- a/usraccount.html
+++ b/usraccount.html
@@ -278,7 +278,7 @@
                         <h6 class="title">Email:</h6>
                       </div>
                       <div class="details-content media-body">
-                        <p>palastinearabia@gmail.com/p>
+                        <p>palastinearabia@gmail.com</p>
                       </div>
                     </div>
                     <div class="single-details-item d-flex flex-wrap">
