--- a/login.html
+++ b/login.html
@@ -273,8 +273,8 @@
                                     </div>
                                     <a class="forget" href="#">Forget Password?</a>
                                 </div>
-                                <div id="signInButton" class="single-form">
-                                    <a id="location"  href="usraccount.html" class="main-btn primary-btn">Sign in</a>
+                                <div  class="single-form">
+                                    <button onclick="validate()" id="signInButton"  href="#" class="main-btn primary-btn">Sign in</button>
                                     
                                 </div>
                             </div>
