--- a/usraccount.html
+++ b/usraccount.html
@@ -248,14 +248,14 @@
             <div class="col-lg-9">
               <div class="profile">
                 <div class="profile-header">
-                  <div class="profile-cover-photo bg_cover" style="background-image: url(assets/images/Zahrancvr.jpg)"></div>
+                  <div id="crntusrcvr" class="profile-cover-photo bg_cover" style="background-image: url(assets/images/Zahrancvr.jpg)"></div>
                   <div class="profile-author d-sm-flex flex-row-reverse justify-content-between align-items-end">
                     <div class="profile-photo">
-                      <img src="assets/images/Zahran.jpg" alt="Profile Photo">
+                      <img id="crntusrpic" src="assets/images/barakatcvr.jpg" alt="Profile Photo">
                     </div>
                     <div class="profile-name">
-                      <h4 class="name">Mohamed Zahran</h4>
-                      <p class="email">palastinearabia@gmail.com</p>
+                      <h4 id="crntusrName" class="name">Mohamed Zahran</h4>
+                      <p id="crntusrEmail" class="email">palastinearabia@gmail.com</p>
                     </div>
                   </div>
                 </div>
@@ -267,26 +267,26 @@
                   <div class="profile-details">
                     <div class="single-details-item d-flex flex-wrap">
                       <div class="details-title">
-                        <h6 class="title">User Full Name:</h6>
+                        <h6  class="title">Surname:</h6>
                       </div>
-                      <div class="details-content media-body">
-                        <p>Zahran</p>
-                      </div>
-                    </div>
-                    <div class="single-details-item d-flex flex-wrap">
-                      <div class="details-title">
-                        <h6 class="title">Email:</h6>
-                      </div>
-                      <div class="details-content media-body">
-                        <p>palastinearabia@gmail.com</p>
+                      <div  class="details-content media-body">
+                        <p id="crntusrSurname">Zahran</p>
                       </div>
                     </div>
                     <div class="single-details-item d-flex flex-wrap">
                       <div class="details-title">
-                        <h6 class="title">Phone:</h6>
+                        <h6  class="title">Email:</h6>
                       </div>
                       <div class="details-content media-body">
-                        <p>+20 109 2088 922</p>
+                        <p id="crntusrEmaill">palastinearabia@gmail.com</p>
+                      </div>
+                    </div>
+                    <div class="single-details-item d-flex flex-wrap">
+                      <div class="details-title">
+                        <h6  class="title">Phone:</h6>
+                      </div>
+                      <div class="details-content media-body">
+                        <p id="crntusrno">+20 109 2088 922</p>
                       </div>
                     </div>
                     <div class="single-details-item d-flex flex-wrap">
@@ -294,7 +294,7 @@
                         <h6 class="title">Address:</h6>
                       </div>
                       <div class="details-content media-body">
-                        <p>Company Inc., 8901 Marmora Road, Glasgow, D04 89GR.</p>
+                        <p id="crntusraddrs">Company Inc., 8901 Marmora Road, Glasgow, D04 89GR.</p>
                       </div>
                     </div>
                     <div class="single-details-item d-flex flex-wrap">
@@ -302,7 +302,7 @@
                         <h6 class="title">Gender:</h6>
                       </div>
                       <div class="details-content media-body">
-                        <p>Male</p>
+                        <p id="crntusrgndr">Male</p>
                       </div>
                     </div>
                     <div class="single-details-item d-flex flex-wrap">
@@ -310,7 +310,7 @@
                         <h6 class="title">Birthday:</h6>
                       </div>
                       <div class="details-content media-body">
-                        <p>04 January 1992</p>
+                        <p id="crntusrbd">04 January 1992</p>
                       </div>
                     </div>
                   </div>
@@ -536,6 +536,7 @@
     <script src="assets/js/main.js"></script>
     <script src="assets/js/shop.js"></script>
     <script src="assets/js/recent.js"></script>
+    <script src="assets/js/user.js"></script>
     <!-- <script src="assets/js/cart.js"></script> -->
     
 
