--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                 <ul class="main-menu">
                                     <li><a href="index.html">Home</a></li>
                                     <li class="position-static menu-item-has-children">
-                                        <a href="#">Womans</a>
+                                        <a href="#">Women</a>
                                         <!-- sub mega dropdown Start -->
                                         <ul class="sub-mega-dropdown">
                                             <li>
