--- a/cart.html
+++ b/cart.html
@@ -463,6 +463,8 @@
         <!--====== Main js ======-->
         <script src="assets/js/main.js"></script>
         <script src="assets/js/cart.js"></script>
+        <script src="assets/js/shop.js"></script>
+        <script src="assets/js/recent.js"></script>
       
     
     <iframe style="display: none;"></iframe><hv-copy-modal></hv-copy-modal><div id="yt_article_summary_widget_wrapper" class="yt_article_summary_widget_wrapper" style="display: none;">
